<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.swsk33</groupId>
	<artifactId>file-lift-parent</artifactId>
	<version>1.1.0</version>
	<packaging>pom</packaging>
	<name>FileLift - Total Parent</name>
	<description>一款用于文件上传的外部库，其中封装了多种文件上传和管理操作的接口，并且支持使用文件系统或者数据库等多种方式存放文件，经过简单配置即可使用</description>
	<url>https://github.com/swsk33/file-lift</url>

	<!-- 指定构建该项目时，需要构建的子模块 -->
	<!-- 不构建所有的测试模块 -->
	<modules>
		<module>file-lift-core</module>
		<module>file-lift-spring-boot-starter</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<file.lift.version>1.1.0</file.lift.version>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License v2.0</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/swsk33/file-lift</url>
		<connection>git@github.com:swsk33/file-lift.git</connection>
		<developerConnection>git@github.com:swsk33/file-lift.git</developerConnection>
	</scm>

	<developers>
		<developer>
			<name>守望时空33</name>
			<email>yanhanhui2001a@163.com</email>
			<url>https://github.com/swsk33</url>
		</developer>
	</developers>

	<!-- 公用依赖 -->
	<dependencies>
		<!-- Lombok注解支持 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<!-- 依赖版本管理 -->
	<dependencyManagement>
		<dependencies>
			<!-- Hutool -->
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>5.8.26</version>
			</dependency>

			<!-- MongoDB -->
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongodb-driver-sync</artifactId>
				<version>4.11.1</version>
			</dependency>

			<!-- FileLift核心 -->
			<dependency>
				<groupId>io.github.swsk33</groupId>
				<artifactId>file-lift-core</artifactId>
				<version>${file.lift.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- Sonatype中央仓库发布插件 -->
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.1.2</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<tokenEnabled>true</tokenEnabled>
				</configuration>
			</plugin>

			<!-- 源码生成插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Javadoc文档生成插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- GPG签名插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>